Configuration for deployment

--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,18 @@
 
     <groupId>org.springframework</groupId>
     <artifactId>gs-spring-boot</artifactId>
-    <version>0.1.0</version>
+    <version>0.1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.0.2.RELEASE</version>
     </parent>
+
+    <properties>
+        <start-class>hello.Application</start-class>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -31,10 +36,6 @@
         </dependency>
     </dependencies>
 
-    <properties>
-        <start-class>hello.Application</start-class>
-    </properties>
-
     <build>
         <plugins>
             <plugin> 
@@ -44,6 +45,16 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.4.2</version>
+                <configuration>
+                    <tagNameFormat>v@{project.version}</tagNameFormat>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <releaseProfiles>releases</releaseProfiles>
+                </configuration>
             </plugin>
         </plugins>
     </build>
@@ -55,6 +66,7 @@
             <snapshots><enabled>true</enabled></snapshots>
         </repository>
     </repositories>
+
     <pluginRepositories>
         <pluginRepository>
             <id>spring-snapshots</id>
@@ -62,4 +74,25 @@
             <snapshots><enabled>true</enabled></snapshots>
         </pluginRepository>
     </pluginRepositories>
+
+    <distributionManagement>
+        <repository>
+            <id>nexus</id>
+            <name>release</name>
+            <url>http://192.168.29.101:8081/nexus/content/repositories/releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>nexus</id>
+            <name>snapshot</name>
+            <url>http://192.168.29.101:8081/nexus/content/repositories/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
+
+    <scm>
+        <connection>scm:git:https://github.com/bewilcox/app-test-docker-ci.git</connection>
+        <developerConnection>scm:git:https://github.com/bewilcox/app-test-docker-ci.git</developerConnection>
+        <url>https://github.com/bewilcox/app-test-docker-ci</url>
+        <tag>HEAD</tag>
+    </scm>
+
 </project>
