--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.springframework</groupId>
     <artifactId>gs-spring-boot</artifactId>
-    <version>0.1.0</version>
+    <version>0.1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <parent>
@@ -91,7 +92,7 @@
         <connection>scm:git:https://github.com/bewilcox/app-test-docker-ci.git</connection>
         <developerConnection>scm:git:https://github.com/bewilcox/app-test-docker-ci.git</developerConnection>
         <url>https://github.com/bewilcox/app-test-docker-ci</url>
-        <tag>v0.1.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
 </project>
