--- a/pom.xml
+++ b/pom.xml
@@ -89,8 +89,8 @@
     </distributionManagement>
 
     <scm>
-        <connection>scm:git:git://github.com/bewilcox/app-test-docker-ci.git</connection>
-        <developerConnection>scm:git:git://github.com/bewilcox/app-test-docker-ci.git</developerConnection>
+        <connection>scm:git:https://github.com/bewilcox/app-test-docker-ci.git</connection>
+        <developerConnection>scm:git:https://github.com/bewilcox/app-test-docker-ci.git</developerConnection>
         <url>https://github.com/bewilcox/app-test-docker-ci</url>
         <tag>HEAD</tag>
     </scm>
