--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.springframework</groupId>
     <artifactId>gs-spring-boot</artifactId>
-    <version>0.1.0</version>
+    <version>0.1.1-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <parent>
@@ -91,7 +91,7 @@
         <connection>scm:git:https://github.com/bewilcox/app-test-docker-ci.git</connection>
         <developerConnection>scm:git:https://github.com/bewilcox/app-test-docker-ci.git</developerConnection>
         <url>https://github.com/bewilcox/app-test-docker-ci</url>
-        <tag>v0.1.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
 </project>
