--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.springframework</groupId>
     <artifactId>gs-spring-boot</artifactId>
-    <version>0.1.1-SNAPSHOT</version>
+    <version>0.1.1</version>
     <packaging>war</packaging>
 
     <parent>
@@ -50,7 +50,6 @@
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.5</version>
                 <configuration>
-                    <tagNameFormat>v@{project.version}</tagNameFormat>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                     <releaseProfiles>releases</releaseProfiles>
                 </configuration>
@@ -91,7 +90,7 @@
         <connection>scm:git:https://github.com/bewilcox/app-test-docker-ci.git</connection>
         <developerConnection>scm:git:https://github.com/bewilcox/app-test-docker-ci.git</developerConnection>
         <url>https://github.com/bewilcox/app-test-docker-ci</url>
-        <tag>HEAD</tag>
+        <tag>0.1.1</tag>
     </scm>
 
 </project>
