change install java

--- a/delivery-scripts/Dockerfile
+++ b/delivery-scripts/Dockerfile
@@ -5,12 +5,11 @@ RUN apt-get update
 RUN apt-get install -y git curl maven wget software-properties-common
 
 # Install Java.
-RUN \
-  echo debconf shared/accepted-oracle-license-v1-1 select true | debconf-set-selections && \
-  echo debconf shared/accepted-oracle-license-v1-1 seen true | debconf-set-selections && \
-  add-apt-repository -y ppa:webupd8team/java && \
-  apt-get update && \
-  apt-get install -y oracle-java7-installer
+RUN echo debconf shared/accepted-oracle-license-v1-1 select true | debconf-set-selections
+RUN echo debconf shared/accepted-oracle-license-v1-1 seen true | debconf-set-selections
+RUN add-apt-repository -y ppa:webupd8team/java
+RUN apt-get update
+RUN apt-get install -y oracle-java7-installer
 
 # Environment variable
 ENV JAVA_HOME /usr/lib/jvm/java-7-oracle
