--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,9 @@ sonar.projectKey=prj-example-webapp
 sonar.projectName=prj-example-webapp
 sonar.projectVersion=0.1.2
 
+# Chemin vers les sources (obligatoire).
+sources=src
+
 # Décommenter ces lignes si le projet utilise des spécificités de Java 1.5 ou 1.6
 #sonar.java.source=1.7
 #sonar.java.target=1.7
