--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-spring.jpa.hibernate.ddl-auto: validate
+#spring.jpa.hibernate.ddl-auto: none
+#spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:mysql://192.168.29.111:3306/test
+spring.datasource.username=testuser
+spring.datasource.password=testpwd
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
+# Allow templates to be reloaded at dev time
+spring.thymeleaf.cache: false
+server.tomcat.access_log_enabled: true
+server.tomcat.basedir: target/tomcat
