Add MySQL installation and params

--- a/delivery-scripts/Dockerfile
+++ b/delivery-scripts/Dockerfile
@@ -11,6 +11,14 @@ RUN add-apt-repository -y ppa:webupd8team/java
 RUN apt-get update
 RUN apt-get install -y oracle-java7-installer
 
+# Install MySQL
+RUN apt-get install -y mysql-server-5.5
+ADD my.cnf /etc/mysql/conf.d/my.cnf
+RUN chmod 664 /etc/mysql/conf.d/my.cnf
+ADD run /usr/local/bin/run
+RUN chmod +x /usr/local/bin/run
+VOLUME ["/var/lib/mysql"]
+
 # Environment variable
 ENV JAVA_HOME /usr/lib/jvm/java-7-oracle
 
@@ -21,6 +29,6 @@ RUN chmod 700 /startup_server.sh
 ADD gs-spring-boot.war /gs-spring-boot.war
 
 # Port
-EXPOSE 8080
+EXPOSE 8080 3306
 
 CMD ["/startup_server.sh"]
